--- a/app/src/main/res/layout/activity_view_contact.xml
+++ b/app/src/main/res/layout/activity_view_contact.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewContact">
+    tools:context=".ui.ViewContact">
 
     <ImageView
         android:id="@+id/imgProfile"
         android:layout_width="0dp"
         android:layout_height="198dp"
-        android:layout_marginStart="24dp"
-        android:src="@drawable/ic_baseline_person_24"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:src="@drawable/ic_baseline_person_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
     <TextView
         android:id="@+id/tvName_one"
